--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# IntelliJ
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/misc.xml
+.idea/jsLibraryMappings.xml
+.cache
