--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mdf",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A format for defining models through external schemas",
   "main": "src/index.js",
   "scripts": {
-    "test": "node src/test.js"
+    "test": "node test/test.js"
   },
   "author": "Alan Doherty <alan@karambyte.com>",
   "license": "MIT"
